Update semantic jquery version from 3.3.1 to 3.6.0
- fix Java 9+ deprecated Integer constructors